agv_ws/log/build_2024-05-15_14-46-56/movement/stderr.log
  File "/home/vboxuser/agv_ws/install/movement/lib/python3.10/site-packages/movement/wheel_controller_server.py", line 187
    f_index = 
              ^
SyntaxError: invalid syntax

